tests/e2e/examples/grafana-httproute-00-no-gateway-api/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: grafana-httproute-without-crds
spec:
  concurrent: false
  steps:
  - name: create-resources-without-gateway-api
    try:
    - apply:
        template: true
        file: resources.yaml
    - assert:
        template: true
        file: assertions.yaml
